Fix selecting of the layer after undoing Flatten Image

BUG:398814